[UPD] 강아지 오류수정 및 스웨거 수정
